crates/biome_cli/tests/snapshots/main_cases_html/check_write_html_with_embedded_style_is_idempotent.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome check --write file.html
```

## `biome.json`

```json
{
  "html": {
    "formatter": {
      "enabled": true
    }
  }
}
```

## `file.html`

```html
<!doctype html>
<html lang="en">
	<head>
		<style>
		p {
			color: red;
		}
		</style>
	</head>
	<body>
		<p>Hello</p>
	</body>
</html>

```

# Emitted Messages

```block
Checked 1 file in <TIME>. No fixes applied.
```
