crates/biome_cli/tests/snapshots/main_cases_html/html_comments_suppress_embedded_css_and_json_rules.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome lint file.html
```

## `biome.json`

```json
{
  "linter": {
    "rules": {
      "recommended": false,
      "correctness": { "noUnknownProperty": "error" },
      "suspicious": { "noDuplicateObjectKeys": "error" }
    }
  }
}
```

## `file.html`

```html
<!-- biome-ignore lint/correctness/noUnknownProperty: expected typo -->
<style>.ignored { colr: red; }</style>
<style>.reported { colr: red; }</style>
<!-- biome-ignore lint/suspicious/noDuplicateObjectKeys: expected duplicate -->
<script type="application/json">{"key":1,"key":2}</script>
<script type="application/json">{"key":1,"key":2}</script>
```

# Termination Message

```block
lint ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
biome.json:2:13 deserialize  DEPRECATED  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i The use of the recommended field has been deprecated, and will removed in the next major version of Biome. Use preset instead.
  
    1 │ {
  > 2 │   "linter": {
      │             ^
  > 3 │     "rules": {
  > 4 │       "recommended": false,
  > 5 │       "correctness": { "noUnknownProperty": "error" },
  > 6 │       "suspicious": { "noDuplicateObjectKeys": "error" }
  > 7 │     }
  > 8 │   }
      │   ^
    9 │ }
  
  i Migrate the configuration with the proper command
  
  $ biome migrate
  

```

```block
file.html:3:20 lint/correctness/noUnknownProperty ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Unknown property is not allowed.
  
    1 │ <!-- biome-ignore lint/correctness/noUnknownProperty: expected typo -->
    2 │ <style>.ignored { colr: red; }</style>
  > 3 │ <style>.reported { colr: red; }</style>
      │                    ^^^^
    4 │ <!-- biome-ignore lint/suspicious/noDuplicateObjectKeys: expected duplicate -->
    5 │ <script type="application/json">{"key":1,"key":2}</script>
  
  i See CSS Specifications and browser specific properties for more details.
  
  i To resolve this issue, replace the unknown property with a valid CSS property.
  

```

```block
file.html:6:34 lint/suspicious/noDuplicateObjectKeys ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × The key key was already declared.
  
    4 │ <!-- biome-ignore lint/suspicious/noDuplicateObjectKeys: expected duplicate -->
    5 │ <script type="application/json">{"key":1,"key":2}</script>
  > 6 │ <script type="application/json">{"key":1,"key":2}</script>
      │                                  ^^^^^
  
  i This is where a duplicated key was declared again.
  
    4 │ <!-- biome-ignore lint/suspicious/noDuplicateObjectKeys: expected duplicate -->
    5 │ <script type="application/json">{"key":1,"key":2}</script>
  > 6 │ <script type="application/json">{"key":1,"key":2}</script>
      │                                          ^^^^^
  
  i If a key is defined multiple times, only the last definition takes effect. Previous definitions are ignored.
  

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 2 errors.
```
