crates/biome_cli/tests/snapshots/main_cases_html/lint_write_html_with_embedded_script_is_idempotent.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome lint --write file.html
```

## `file.html`

```html
<!doctype html>
<html lang="en">
<head>
  <meta charset="UTF-8" />
  <script type="module">
    import { init } from "./src"

    init()
  </script>
</head>
<body></body>
</html>

```

# Emitted Messages

```block
Checked 1 file in <TIME>. No fixes applied.
```
