crates/biome_cli/tests/snapshots/main_cases_html/no_undeclared_classes_silent_without_style_info.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## `biome.json`

```json
{
  "linter": { "enabled": true },
  "html": {
    "linter": { "enabled": true },
    "experimentalFullSupportEnabled": true
  }
}
```

## `file.html`

```html
<div class="anything">Content</div>
```

# Emitted Messages

```block
Checked 2 files in <TIME>. No fixes applied.
```
