crates/biome_cli/tests/snapshots/main_cases_html/should_apply_fixes_to_embedded_languages.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome check --write --unsafe file.html
```

## `biome.json`

```json
{
  "html": {
    "formatter": {
      "enabled": true,
      "indentScriptAndStyle": true
    },
    "linter": {
      "enabled": true
    },
    "assist": {
      "enabled": true
    }
  }
}
```

## `file.html`

```html
<script type="module">
	import _ from "lodash";
	import z from "zod";

	const schema = z.object({}).optional().nullable();
</script>
<style>
	#id .class div {
		background-color: red;
		background-color: red;
	}
</style>

```

# Termination Message

```block
check ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
file.html:10:3 lint/suspicious/noDuplicateProperties ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Duplicate properties can lead to unexpected behavior and may override previous declarations unintentionally.
  
     8 │ 	#id .class div {
     9 │ 		background-color: red;
  > 10 │ 		background-color: red;
       │ 		^^^^^^^^^^^^^^^^
    11 │ 	}
    12 │ </style>
  
  i background-color is already defined here.
  
     7 │ <style>
     8 │ 	#id .class div {
   > 9 │ 		background-color: red;
       │ 		^^^^^^^^^^^^^^^^
    10 │ 		background-color: red;
    11 │ 	}
  
  i Remove or rename the duplicate property to ensure consistent styling.
  

```

```block
Checked 1 file in <TIME>. Fixed 1 file.
Found 1 error.
```
