crates/biome_cli/tests/snapshots/main_cases_html/should_apply_html_parser_override.snap
---
source: crates/biome_cli/tests/snap_test.rs
assertion_line: 692
expression: redactor(content)
---
## Command

```shell
biome format special/file.html
```

## `biome.json`

```json
{
  "html": { "formatter": { "enabled": true } },
  "overrides": [
    {
      "includes": ["special/**"],
      "html": { "parser": { "interpolation": true } }
    }
  ]
}
```

## `special/file.html`

```html
<div>{{ $interpolation }}</div>

```

# Emitted Messages

```block
Checked 1 file in <TIME>. No fixes applied.
```
